# pytorch-to-javascript-with-onnx-js

./: .gitignore  .tool-versions  README copy.md  README.md  convert_to_onnx.py  inference_mnist_model.py  install_onnx.sh  install_torch_cpu.sh  preview_dataset.py  pyinit.sh  pyproject.toml  train_mnist_model.py  verify_onnx.py
debug_demo/: debug.html
full_demo/: index.html  script.js  style copy.css  style.css
