[tool.poetry]
name = "pytorch-to-javascript-with-onnx-js"
version = "0.1.0"
description = ""
authors = ["akiraina <a.inayoshi@outlook.com>"]
readme = "README.md"
packages = [{include = "pytorch_to_javascript_with_onnx_js"}]

[tool.poetry.dependencies]
python = "3.9.17"
pydantic = "^2.6.0"
torch = {version = "^2.2.0+cpu", source = "pytorch"}
torchvision = {version = "^0.17.0+cpu", source = "pytorch"}
onnxruntime = "^1.17.0"
onnx = "^1.15.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
pytest = "7.4.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
